--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,85 +1,184 @@
 .App {
-    text-align: center;
-    padding: 20px;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  text-align: center;
+  padding: 0px;
+  background-color: #0d1b2a;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  color: #e0e1dd;
+  align-items: center;
+}
+.DivImput {
+  background: linear-gradient(35deg, #1b263b, #000000); /* Degradê azul */
+  padding: 100px;
+  display: flex;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  gap: 10%;
 }
 
 textarea {
-    width: 100%;
-    height: 150px;
-    margin-bottom: 20px;
+  background: linear-gradient(135deg, #1b263b, #415a77); /* Degradê azul */
+  width: 50%;
+  height: 100px;
+  color: white; /* Para manter o texto visível */
+  font-size: 16px;
+  border-radius: 8px;
+  border: 2px solid #415a77; /* Azul acinzentado */
 }
 
 button {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    cursor: pointer;
-    margin-bottom: 20px;
+  border-radius: 8px;
+  background: linear-gradient(135deg, #1b263b, #ff5733); /* Degradê azul */
+  color: white;
+  border: none;
+  cursor: pointer;
+  margin-bottom: 20px;
+  width: 20%;
+  height: 100px;
+  font-size: 32px;
 }
 
 button:hover {
-    background-color: #0056b3;
+  background-color: #0056b3;
 }
 
 .notas-container {
-    margin-top: 20px;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+  height: 430px;
+  box-sizing: border-box;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  align-items: flex-start;
 }
 
 .jogador-nota {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
 }
 
 .jogador-nota span {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
 .jogador-nota input {
-    width: 60px;
-    padding: 5px;
+  width: 60px;
+  padding: 5px;
 }
 
 .sorteio-button {
-    margin-top: 20px;
-    background-color: #28a745;
+  margin-top: 20px;
+  background-color: #28a745;
 }
 
 .sorteio-button:hover {
-    background-color: #218838;
+  background-color: #218838;
 }
 .times-container {
-    margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  width: 100%;
+  gap: 1%;
 }
 
 .time {
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 10px;
-    margin-bottom: 20px;
-}
-
-.time h3 {
-    margin-bottom: 10px;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+  width: 48%;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  padding: 0;
+  h3 {
+    margin-bottom: 0;
+  }
 }
 
 .time ul {
-    list-style-type: none;
-    padding: 0;
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  margin-bottom: 5px;
 }
 
-.time li {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
+.carta {
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+  height: 300px;
+  align-items: center;
+}
+.carta_time_1 {
+  background-image: url("../../public/assets/Amarelo.png");
+  background-size: contain; /* Ajusta a imagem ao tamanho da div */
+  background-repeat: no-repeat; /* Evita que a imagem se repita */
+  background-position: center; /* Centraliza a imagem */
+  height: 200px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.carta_time_2 {
+  background-image: url("../../public/assets/Preto.png");
+  background-size: contain; /* Ajusta a imagem ao tamanho da div */
+  background-repeat: no-repeat; /* Evita que a imagem se repita */
+  background-position: center; /* Centraliza a imagem */
+  height: 200px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.carta_time_3 {
+  background-image: url("../../public/assets/Azul.png");
+  background-size: contain; /* Ajusta a imagem ao tamanho da div */
+  background-repeat: no-repeat; /* Evita que a imagem se repita */
+  background-position: center; /* Centraliza a imagem */
+  height: 200px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.carta_time_4 {
+  background-image: url("../../public/assets/Rosa.png");
+  background-size: contain; /* Ajusta a imagem ao tamanho da div */
+  background-repeat: no-repeat; /* Evita que a imagem se repita */
+  background-position: center; /* Centraliza a imagem */
+  height: 200px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  
 }
 
 .time img {
-    margin-right: 10px;
+  width: 55%;
+  margin-top: 3px;
 }
 
 .time span {
-    margin-right: 10px;
+  margin-top: 2px;
+  font-size: 18px;
 }
